<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    tools:context=".DetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">
            <androidx.cardview.widget.CardView
                android:id="@+id/card_header"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:id="@+id/ln_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_circle_detail"
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        tools:src="@color/black"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:id="@+id/tv_name_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/alegreya_bold"
                        tools:text="@string/todo" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_follow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_title_followers"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alegreya_bold"
                            android:text="@string/title_followers" />

                        <TextView
                            android:id="@+id/tv_title_following"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alegreya_bold"
                            android:text="@string/title_following" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_followers_detail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alegreya"
                            tools:text="@string/todo" />

                        <TextView
                            android:id="@+id/tv_following_detail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alegreya"
                            tools:text="@string/todo" />
                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_detail_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="20dp"
                        android:fontFamily="@font/alegreya_bold"
                        android:text="@string/title_detail_profile"
                        android:textSize="30sp" />

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:layout_marginBottom="10dp">
                       <androidx.cardview.widget.CardView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="1">
                           <LinearLayout
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:orientation="horizontal">
                               <ImageView
                                   android:id="@+id/img_username_detail"
                                   android:layout_width="50dp"
                                   android:layout_height="50dp"
                                   android:layout_margin="10dp"
                                   app:srcCompat="@drawable/ic_user"
                                   tools:ignore="VectorDrawableCompat"
                                   android:contentDescription="@string/todo" />
                               <LinearLayout
                                   android:layout_width="wrap_content"
                                   android:layout_height="wrap_content"
                                   android:orientation="vertical"
                                   android:layout_gravity="center_vertical">

                                   <TextView
                                       android:id="@+id/tv_title_username"
                                       android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       android:fontFamily="@font/alegreya_bold"
                                       android:text="@string/title_username"
                                       tools:ignore="TooDeepLayout" />

                                   <TextView
                                       android:id="@+id/tv_username_detail"
                                       android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       android:fontFamily="@font/alegreya"
                                       tools:text="@string/todo" />
                               </LinearLayout>
                           </LinearLayout>

                       </androidx.cardview.widget.CardView>

                       <androidx.cardview.widget.CardView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="1">
                           <LinearLayout
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:orientation="horizontal">
                               <ImageView
                                   android:id="@+id/img_location_detail"
                                   android:layout_width="50dp"
                                   android:layout_height="50dp"
                                   android:layout_margin="10dp"
                                   app:srcCompat="@drawable/ic_location"
                                   tools:ignore="VectorDrawableCompat"
                                   android:contentDescription="@string/todo" />
                               <LinearLayout
                                   android:layout_width="wrap_content"
                                   android:layout_height="wrap_content"
                                   android:orientation="vertical"
                                   android:layout_gravity="center_vertical">

                                   <TextView
                                       android:id="@+id/tv_title_location"
                                       android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       android:fontFamily="@font/alegreya_bold"
                                       android:text="@string/title_location" />

                                   <TextView
                                       android:id="@+id/tv_location_detail"
                                       android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       android:fontFamily="@font/alegreya"
                                       android:maxLines="2"
                                       tools:text="@string/todo" />
                               </LinearLayout>
                           </LinearLayout>

                       </androidx.cardview.widget.CardView>
                   </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="15dp">
                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <ImageView
                                    android:id="@+id/img_repository_detail"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_margin="10dp"
                                    app:srcCompat="@drawable/ic_repository"
                                    tools:ignore="VectorDrawableCompat"
                                    android:contentDescription="@string/todo" />
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_gravity="center_vertical">

                                    <TextView
                                        android:id="@+id/tv_title_repository"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/alegreya_bold"
                                        android:text="@string/title_repository" />

                                    <TextView
                                        android:id="@+id/tv_repository_detail"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/alegreya"
                                        android:maxLines="2"
                                        tools:text="@string/todo" />

                                </LinearLayout>
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <ImageView
                                    android:id="@+id/img_company_detail"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_margin="10dp"
                                    app:srcCompat="@drawable/ic_company"
                                    tools:ignore="VectorDrawableCompat"
                                    android:contentDescription="@string/todo" />
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_gravity="center_vertical">

                                    <TextView
                                        android:id="@+id/tv_title_company"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/alegreya_bold"
                                        android:text="@string/title_company" />

                                    <TextView
                                        android:id="@+id/tv_company_detail"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/alegreya"
                                        android:maxLines="2"
                                        tools:text="@string/todo" />
                                </LinearLayout>
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>
